FEAT: add Pinterest board pin client, outfit tag parser, and pin entities -2